# gesture

./: README.md  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/utils/: asl.py  extract_transcript.py
browser_extension/: README.md  asl_bridge.js  audio-worklet-processor.js  background.js  manifest.json  options.html  overlay.css  youtube_overlay.js
browser_extension/asl_app/: asl_bridge.js  asl_system.html
browser_extension/asl_app/src/: hand-rig.js  main.js
browser_extension/asl_app/src/data/: gloss.js
hand_model/: asl_system.html
hand_model/src/: anim-player.js  main.js  utils.js
hand_model/src/data/: shapes.js  signs.js
