[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "faster-whisper>=1.2.1",
    "fastapi>=0.115.0",
    "nltk>=3.9.4",
    "uvicorn>=0.46.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
]
